feat: add split revocation
